little new update

--- a/.config/wpg/wpg.conf
+++ b/.config/wpg/wpg.conf
@@ -3,10 +3,10 @@ set_wallpaper = true
 gtk = true
 active = 1
 light_theme = false
-editor = kitty -e lvim
+editor = kitty -e nvim
 execute_cmd = true
 command = ./.config/wpg/post_apply.sh
-backend = colorthief
+backend = wal
 alpha = 100
 smart_sort = true
 auto_adjust = true
