--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,31 +1,71 @@
-include ~/.cache/wal/colors-kitty.conf
+
+disable_ligatures never
+
+background #0a0a0a
+foreground #f0f0f0
+
+color0 #0a0a0a
+color8 #bac2de
+
+color1 #f28fad
+color9 #f28fad
+
+color2 #b8f2c4
+color10 #81ebf9
+
+color3 #fceaa1
+color11 #f8bd96
+
+color4 #7e99fc
+color12 #89dceb
+
+color5 #b97efc
+color13 #ddb6f2
+
+color6 #81ebf9
+color14 #89dceb
+
+color7 #bac2de
+color15 #f5c2e7
+
+cursor #f5c2e7
+cursor_text_color #0a0a0a
+
+selection_background #b97efc
+selection_foreground #0a0a0a
+
+url_color #7e99fc
 
 
-font_family Iosevka NF Light
-bold_font        Iosevka NF SemiBold
-italic_font      Iosevka NF Light Italic
-bold_italic_font IosevkaNFM-BoldItalic 
-font_size 14.0
+allow_remote_control yes
+font_family JetBrainsMono Nerd Font
+font_size 16.0
 adjust_line_height 110%
 mouse_hide_wait 4.0
 enable_audio_bell no
 window_padding_width 15
 background_opacity 0.82
+#background_opacity 1
 map ctrl+equal change_font_size all +2.0
 map ctrl+kp_add change_font_size all +2
 
 map ctrl+minus change_font_size all -2.0
 map ctrl+kp_subtract change_font_size all  -2
 
- background_blur 1 
+background_blur 1
 cursor_trail 1
 cursor_trail_decay 0.2 0.6
 # Smooth scrolling
-   scrollback_lines 2000
-   wheel_scroll_multiplier 2.0
-   touch_scroll_multiplier 600.0
+   wheel_scroll_multiplier 0.5
+   touch_scroll_multiplier 60.0
 
    # Optional: for even smoother scrolling
    repaint_delay 1
    input_delay 3
    sync_to_monitor yes
+
+
+
+
+
+include ~/.cache/wal/colors-kitty.conf
